// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rule element-case configured with "lowercase" smoketest 1`] = `
Array [
  Object {
    "errorCount": 2,
    "filePath": "test-files/rules/element-case.html",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 2,
        "message": "Element \\"DIV\\" should be lowercase",
        "offset": 13,
        "ruleId": "element-case",
        "selector": "div:nth-child(2)",
        "severity": 2,
        "size": 3,
      },
      Object {
        "column": 2,
        "context": undefined,
        "line": 3,
        "message": "Element \\"dIV\\" should be lowercase",
        "offset": 25,
        "ruleId": "element-case",
        "selector": "div:nth-child(3)",
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<div></div>
<DIV></DIV>
<dIV></dIV>
",
    "warningCount": 0,
  },
]
`;

exports[`rule element-case configured with "uppercase" smoketest 1`] = `
Array [
  Object {
    "errorCount": 2,
    "filePath": "test-files/rules/element-case.html",
    "messages": Array [
      Object {
        "column": 2,
        "context": undefined,
        "line": 1,
        "message": "Element \\"div\\" should be uppercase",
        "offset": 1,
        "ruleId": "element-case",
        "selector": "div",
        "severity": 2,
        "size": 3,
      },
      Object {
        "column": 2,
        "context": undefined,
        "line": 3,
        "message": "Element \\"dIV\\" should be uppercase",
        "offset": 25,
        "ruleId": "element-case",
        "selector": "div:nth-child(3)",
        "severity": 2,
        "size": 3,
      },
    ],
    "source": "<div></div>
<DIV></DIV>
<dIV></dIV>
",
    "warningCount": 0,
  },
]
`;

exports[`rule element-case should contain documentation 1`] = `
Object {
  "description": "Element tagname must be lowercase.",
  "url": "https://html-validate.org/rules/element-case.html",
}
`;
